# Zanuka-Bot

./: .env  .env.prod  .gitignore  bot.py  docker-compose.yml  pyproject.toml  readme.md
go-cqhttp/: Dockerfile
nonebot2/: .dockerignore  .env  Dockerfile  bot.py  requirements.txt
nonebot2/src/plugins/: __init__.py  util.py
nonebot2/src/plugins/dict/: __init__.py  query.py
nonebot2/src/plugins/help/: __init__.py
nonebot2/src/plugins/monitor/: __init__.py
nonebot2/src/plugins/rivenmarket/: __init__.py  match.py  query.py
nonebot2/src/plugins/warframemarket/: __init__.py  match.py  query.py  sort.py
nonebot2/src/plugins/warframewiki/: __init__.py  query.py
nonebot2/src/plugins/worldstate/: __init__.py  query.py
src/data/monitor/: config.ini
src/plugins/alerts/: __init__.py
src/plugins/arbitration/: __init__.py
src/plugins/cycle/: __init__.py
src/plugins/dailydeals/: __init__.py
src/plugins/fissures/: __init__.py
src/plugins/invasions/: __init__.py
src/plugins/monitor/: __init__.py
src/plugins/nightwave/: __init__.py
src/plugins/other/: __init__.py
src/plugins/palladino/: __init__.py
src/plugins/rm/: __init__.py
src/plugins/setu/: __init__.py
src/plugins/sortie/: __init__.py
src/plugins/test/: __init__.py
src/plugins/tools/: __init__.py
src/plugins/update/: __init__.py
src/plugins/voidtrader/: __init__.py
src/plugins/wm/: __init__.py
